--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.080357
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -217,14 +217,13 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Levels/NewSewer.NewSewer:PersistentLevel.NewSewer
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Levels/Forest
-MRUItem4=/Game/Sewer/gatee
+MRUItem0=/Game/Sewer/gatee
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Levels/Forest
 MRUItem5=/Game/Gates/Gate
 MRUItem6=/Game/Sewer/Lever
 MRUItem7=/Game/Chandelier/Chandelier_Mat
@@ -2676,6 +2675,7 @@ Gate_C.Actor=True
 Gate_C.Input=True
 gatee_C.Tick=True
 NewSewer_C.Default=True
+BluePaintPickup_Actor_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
@@ -2729,7 +2729,7 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3240,6 +3240,7 @@ None=======
 /Game/Sewer/Lever.Lever=1
 /Game/Gates/Gate.Gate=1
 /Game/Sewer/gatee.gatee=1
+/Game/Levels/NewSewer.NewSewer:PersistentLevel.NewSewer=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3305,7 +3306,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=310.000 Y=0.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1495.000 Y=859.000
+WindowSize=X=1500.000 Y=864.000
 None=======
 InitiallyMaximized=True
 
@@ -5262,7 +5263,7 @@ MovableAxe_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Re
 AxeInteractLog_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Mush3Pedestal_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Spring_Gnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
-PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 ChefGnome_C=
 DialogueGetLine=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 DialogueGetLine_6=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
@@ -5314,9 +5315,10 @@ DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 DisappearBridge_C=
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 gatee_C=
-NewSewer_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
+NewSewer_C=
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Levers/BaseLever.BaseLever;
 RecentlyPlaced=/Game/Levers/UniqueSwitch3.UniqueSwitch3;
 RecentlyPlaced=/Game/Levers/UniqueSwitch2.UniqueSwitch2;
@@ -5336,7 +5338,6 @@ RecentlyPlaced=/Game/Bubbleopolis/Current/Materials/M_Walls_Bubble_Castle_Inst.M
 RecentlyPlaced=/Game/BubbleTrash/BubbleTrashRed.BubbleTrashRed;
 RecentlyPlaced=/Game/BubbleTrash/BubbleTrash.BubbleTrash;
 RecentlyPlaced=/Game/Bubbleopolis/NewFolder/Bubble_brick_texture_01_Mat_Inst.Bubble_brick_texture_01_Mat_Inst;
-RecentlyPlaced=/Game/Bridge/meshes/SM_MERGED_Bridge_Middle.SM_MERGED_Bridge_Middle;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
