--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Bubbleopolis
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -216,28 +216,33 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Player/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Blueprints/MySaveGame.MySaveGame
+OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/Pause.Pause
+OpenAssetsAtExit=/Game/Levels/PersistentLevel.PersistentLevel:PersistentLevel.PersistentLevel
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Bubble_Wand_Cyan
-MRUItem1=/Game/BubbleWands/Wand_Fractal
-MRUItem2=/Game/Materials/Bubble_Wand_Yellow
-MRUItem3=/Game/BubbleWands/Wand_Sun
-MRUItem4=/Game/Materials/Bubble_Wand_Red
-MRUItem5=/Game/BubbleWands/Wand_Trio
-MRUItem6=/Game/Materials/Bubble_Wand_Green
-MRUItem7=/Game/BubbleWands/Wand_Turtle
-MRUItem8=/Game/Materials/Bubble_Wand_Violet
-MRUItem9=/Game/BubbleWands/Wand_Wheel
-MRUItem10=/Game/Materials/Mat_Bubbles
-MRUItem11=/Game/Levels/Bubbleopolis
-MRUItem12=/Game/Materials/Mat_Bubbles_Inst
-MRUItem13=/Game/Levels/NewSewer
-MRUItem14=/Game/Player/Movement
-MRUItem15=/Game/Animation/Character/Jump_Skeleton
-MRUItem16=/Game/Player/Player_BP
-MRUItem17=/Game/Player/PlayerCharacter
-MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem19=/Game/MushroomBoys/Mush1/Mush1
+MRUItem0=/Game/Blueprints/UI/Widgets/Pause
+MRUItem1=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem2=/Game/Levels/PersistentLevel
+MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem4=/Game/Blueprints/MySaveGame
+MRUItem5=/Game/Levels/Forest
+MRUItem6=/Game/Player/ThirdPersonCharacter
+MRUItem7=/Game/Blueprints/UI/MyGameInstance
+MRUItem8=/Game/Blueprints/UI/LoadingScreen2
+MRUItem9=/Game/Materials/Bubble_Wand_Cyan
+MRUItem10=/Game/BubbleWands/Wand_Fractal
+MRUItem11=/Game/Materials/Bubble_Wand_Yellow
+MRUItem12=/Game/BubbleWands/Wand_Sun
+MRUItem13=/Game/Materials/Bubble_Wand_Red
+MRUItem14=/Game/BubbleWands/Wand_Trio
+MRUItem15=/Game/Materials/Bubble_Wand_Green
+MRUItem16=/Game/BubbleWands/Wand_Turtle
+MRUItem17=/Game/Materials/Bubble_Wand_Violet
+MRUItem18=/Game/BubbleWands/Wand_Wheel
+MRUItem19=/Game/Materials/Mat_Bubbles
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1227,7 +1232,7 @@ Blueprint_Effect_Fire_C.Input=True
 Blueprint_Effect_Fire_C.Actor=True
 Emitter.Navigation=True
 K2Node_Timeline.GraphNodeDetail=True
-PropertyWrapper.Variable=True
+PropertyWrapper.Variable=False
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.DefaultValueCategory=True
 AudioComponent.Randomization=True
@@ -2681,17 +2686,32 @@ AnimGraphNode_LayeredBoneBlend.Performance=True
 LightPickupActor_Blueprint_C.Default=True
 MaterialExpressionIf.MaterialExpressionIf=True
 MaterialExpressionIf.MaterialExpression=True
+LoadingScreen2_C.Default=True
+LoadingScreen2_C.Appearance=True
+LoadingScreen2_C.Designer=True
+LoadingScreen2_C.Input=True
+LoadingScreen2_C.Interaction=True
+LoadingScreen2_C.Performance=True
+LoadingScreen2_C.Layout=True
+LoadingScreen2_C.Behavior=True
+LoadingScreen2_C.Render Transform=True
+LoadingScreen2_C.Accessibility=True
+LoadingScreen2_C.Clipping=True
+LoadingScreen2_C.Navigation=True
+LoadingScreen2_C.Localization=True
+MyGameInstance_C.Default=True
+MySaveGame_C.Default=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Level Name\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
+ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
+Character=
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.PivotOffset\" "
+Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
@@ -2745,8 +2765,8 @@ DataAsset="\"Object.SkeletalMeshes\" "
 PlayerCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 PhysicsSettingsCore="\"Object.Replication.PhysicErrorCorrection\" \"Object.Broadphase.DefaultBroadphaseSettings\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPBounds\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPOuterBounds\" \"Object.ChaosPhysics.ChaosSettings\" "
 Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2767,7 +2787,7 @@ MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Mater
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_Base="\"Object.Settings.SyncGroup\" "
-K2Node="\"Object.Settings.SyncGroup\" "
+K2Node=
 EdGraphNode=
 AnimGraphNode_BlendSpacePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_BlendSpaceBase="\"Object.Settings.SyncGroup\" "
@@ -2802,7 +2822,7 @@ CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CircularThrobber="\"Object.Appearance.Image\" \"Object.Appearance.Image.TintColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 LoadingScreen_C=
-UserWidget=
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PersistentLevel_C=
 MainMenu_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SewerTrack_C="\"Object.Water\" "
@@ -2824,6 +2844,8 @@ AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Set
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 LinuxTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 MacTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
+MySaveGame_C="\"Object.Level Name\" "
+SaveGame="\"Object.Level Name\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3349,7 +3371,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../RobinDocs/GameDev/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4918,11 +4940,11 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Levels/Bubbleopolis
 MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/PersistentLevel
+MRUItem3=/Game/Levels/NewSewer
+MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Levels/ForestBackup
 MRUItem6=/Game/Levels/Sewer
 MRUItem7=/Game/Levels/testYellow
@@ -5266,7 +5288,7 @@ GreenPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 Brush=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 PrimitiveComponent=
 Actor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
-ThirdPersonCharacter_C=
+ThirdPersonCharacter_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 AO1E_C=
 disappear_cube_blueprint_C=
 AOE_Magenta_C=
@@ -5343,6 +5365,8 @@ NewSewer_C=
 TargetPoint=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 BluePaintPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 LightPickupActor_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
+LoadingScreen2_C=
+CharacterMovementComponent=
 
 [PlacementMode]
 RecentlyPlaced=/Game/MushroomBoys/Mush1/Mush1.Mush1;
