--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Player
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -205,7 +205,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/PersistentLevel
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -216,33 +216,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Player/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/Blueprints/MySaveGame.MySaveGame
-OpenAssetsAtExit=/Game/Blueprints/UI/Widgets/Pause.Pause
-OpenAssetsAtExit=/Game/Levels/PersistentLevel.PersistentLevel:PersistentLevel.PersistentLevel
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/UI/Widgets/Pause
-MRUItem1=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem2=/Game/Levels/PersistentLevel
-MRUItem3=/Game/Levels/Bubbleopolis
-MRUItem4=/Game/Blueprints/MySaveGame
-MRUItem5=/Game/Levels/Forest
-MRUItem6=/Game/Player/ThirdPersonCharacter
-MRUItem7=/Game/Blueprints/UI/MyGameInstance
-MRUItem8=/Game/Blueprints/UI/LoadingScreen2
-MRUItem9=/Game/Materials/Bubble_Wand_Cyan
-MRUItem10=/Game/BubbleWands/Wand_Fractal
-MRUItem11=/Game/Materials/Bubble_Wand_Yellow
-MRUItem12=/Game/BubbleWands/Wand_Sun
-MRUItem13=/Game/Materials/Bubble_Wand_Red
-MRUItem14=/Game/BubbleWands/Wand_Trio
-MRUItem15=/Game/Materials/Bubble_Wand_Green
-MRUItem16=/Game/BubbleWands/Wand_Turtle
-MRUItem17=/Game/Materials/Bubble_Wand_Violet
-MRUItem18=/Game/BubbleWands/Wand_Wheel
-MRUItem19=/Game/Materials/Mat_Bubbles
+MRUItem0=/Game/Player/ThirdPersonCharacter
+MRUItem1=/Game/Animation/Character/Jump
+MRUItem2=/Game/Player/Movement
+MRUItem3=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
+MRUItem4=/Game/Player/Player_BP
+MRUItem5=/Game/Blueprints/UI/Widgets/Pause
+MRUItem6=/Game/Blueprints/MySaveGame
+MRUItem7=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem8=/Game/Levels/PersistentLevel
+MRUItem9=/Game/Levels/Bubbleopolis
+MRUItem10=/Game/Levels/Forest
+MRUItem11=/Game/Blueprints/UI/MyGameInstance
+MRUItem12=/Game/Blueprints/UI/LoadingScreen2
+MRUItem13=/Game/Materials/Bubble_Wand_Cyan
+MRUItem14=/Game/BubbleWands/Wand_Fractal
+MRUItem15=/Game/Materials/Bubble_Wand_Yellow
+MRUItem16=/Game/BubbleWands/Wand_Sun
+MRUItem17=/Game/Materials/Bubble_Wand_Red
+MRUItem18=/Game/BubbleWands/Wand_Trio
+MRUItem19=/Game/Materials/Bubble_Wand_Green
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1232,7 +1227,7 @@ Blueprint_Effect_Fire_C.Input=True
 Blueprint_Effect_Fire_C.Actor=True
 Emitter.Navigation=True
 K2Node_Timeline.GraphNodeDetail=True
-PropertyWrapper.Variable=False
+PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.DefaultValueCategory=True
 AudioComponent.Randomization=True
@@ -2704,7 +2699,7 @@ MySaveGame_C.Default=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Level Name\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -2754,9 +2749,9 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -2787,7 +2782,7 @@ MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Mater
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_Base="\"Object.Settings.SyncGroup\" "
-K2Node=
+K2Node="\"Object.Settings.SyncGroup\" "
 EdGraphNode=
 AnimGraphNode_BlendSpacePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_BlendSpaceBase="\"Object.Settings.SyncGroup\" "
@@ -2844,8 +2839,8 @@ AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Set
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 LinuxTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 MacTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
-MySaveGame_C="\"Object.Level Name\" "
-SaveGame="\"Object.Level Name\" "
+MySaveGame_C=
+SaveGame=
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3287,6 +3282,9 @@ None=======
 /Game/BubbleWands/Wand_Sun.Wand_Sun=1
 /Game/Materials/Bubble_Wand_Cyan.Bubble_Wand_Cyan=1
 /Game/BubbleWands/Wand_Fractal.Wand_Fractal=1
+/Game/Blueprints/MySaveGame.MySaveGame=1
+/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com.Standing_Idle_02_Anim_mixamo_com=1
+/Game/Animation/Character/Jump.Jump=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -5416,6 +5414,7 @@ FoliageType_InstancedStaticMesh.Placement=False
 FbxImportUI.Mesh=True
 FbxImportUI.Material=False
 StaticMesh.Collision=True
+SkeletalMeshComponent.Animation=True
 
 [FEditorModeTools]
 CoordSystem=1
