--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Player
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -218,26 +218,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/ThirdPersonCharacter
-MRUItem1=/Game/Animation/Character/Jump
-MRUItem2=/Game/Player/Movement
-MRUItem3=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
-MRUItem4=/Game/Player/Player_BP
-MRUItem5=/Game/Blueprints/UI/Widgets/Pause
-MRUItem6=/Game/Blueprints/MySaveGame
-MRUItem7=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem8=/Game/Levels/PersistentLevel
-MRUItem9=/Game/Levels/Bubbleopolis
-MRUItem10=/Game/Levels/Forest
-MRUItem11=/Game/Blueprints/UI/MyGameInstance
-MRUItem12=/Game/Blueprints/UI/LoadingScreen2
-MRUItem13=/Game/Materials/Bubble_Wand_Cyan
-MRUItem14=/Game/BubbleWands/Wand_Fractal
-MRUItem15=/Game/Materials/Bubble_Wand_Yellow
-MRUItem16=/Game/BubbleWands/Wand_Sun
-MRUItem17=/Game/Materials/Bubble_Wand_Red
-MRUItem18=/Game/BubbleWands/Wand_Trio
-MRUItem19=/Game/Materials/Bubble_Wand_Green
+MRUItem0=/Game/Table/Table
+MRUItem1=/Game/Table/lambert1
+MRUItem2=/Game/Couch/CouchRoyal
+MRUItem3=/Game/Couch/M_CouchRoyal
+MRUItem4=/Game/Couch/lambert1
+MRUItem5=/Game/Door/Door_LP
+MRUItem6=/Game/Door/Door1
+MRUItem7=/Game/Player/ThirdPersonCharacter
+MRUItem8=/Game/Animation/Character/Jump
+MRUItem9=/Game/Player/Movement
+MRUItem10=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
+MRUItem11=/Game/Player/Player_BP
+MRUItem12=/Game/Blueprints/UI/Widgets/Pause
+MRUItem13=/Game/Blueprints/MySaveGame
+MRUItem14=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem15=/Game/Levels/PersistentLevel
+MRUItem16=/Game/Levels/Bubbleopolis
+MRUItem17=/Game/Levels/Forest
+MRUItem18=/Game/Blueprints/UI/MyGameInstance
+MRUItem19=/Game/Blueprints/UI/LoadingScreen2
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3285,6 +3285,12 @@ None=======
 /Game/Blueprints/MySaveGame.MySaveGame=1
 /Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com.Standing_Idle_02_Anim_mixamo_com=1
 /Game/Animation/Character/Jump.Jump=1
+/Game/Door/M_Door.M_Door=1
+/Game/Couch/CouchRoyal.CouchRoyal=1
+/Game/Couch/M_CouchRoyal.M_CouchRoyal=1
+/Game/Couch/M_CouchCommon.M_CouchCommon=1
+/Game/Table/M_Table.M_Table=1
+/Game/Table/Table.Table=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3369,7 +3375,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../Serotopia2021/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=C:/Users/hoang/Documents/GitHub/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4938,9 +4944,9 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/PersistentLevel
+MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/NewSewer
 MRUItem4=/Game/Levels/MainMenu
 MRUItem5=/Game/Levels/ForestBackup
@@ -4953,7 +4959,7 @@ MRUItem11=/Game/Levels/testMagenta
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5465,6 +5471,7 @@ None=======
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
